--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/hhhtak/graphql-tutorial#readme",
   "dependencies": {
-    "graphql": "^16.6.0",
+    "@types/express": "^4.17.14",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^14.7.0",
     "ts-node": "^10.9.1"
   }
 }
